# ros2_swarm_ws

./: .gitignore  README.md  README_control.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  ros2-ci.yml
src/gazebo_spawner/: setup.cfg  setup.py
src/nav2_bringup/: CMakeLists.txt  local_setup.sh
src/nav2_bringup/bringup/: CMakeLists.txt
src/nav2_bringup/launch/: tb3_simulation_launch.py
src/nav2_bringup/worlds/: workshop.world  world_only.model
src/rotation/: package.xml  setup.cfg  setup.py
src/rotation/launch/: rotation.launch.py
src/rotation/rotation/: Rotation.py
src/tribot3_description/: CMakeLists.txt  package.xml
src/tribot3_description/urdf/: tribot3_burger.urdf  tribot3_waffle.urdf  tribot3_waffle_pi.urdf
src/tribot_bringup/bringup/: CMakeLists.txt  package.xml
src/tribot_bringup/bringup/launch/: localization_launch.py  multi_tb3_simulation_launch.py  spawn_tb3_launch.py  tribot_simulation_launch.py
src/tribot_bringup/bringup/maps/: tribot3_world.yaml
src/tribot_bringup/bringup/params/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_params.yaml
src/tribot_bringup/bringup/urdf/: tribot.urdf  tribot3_waffle.urdf
src/tribot_bringup/bringup/worlds/: waffle.model  world_only.model
src/tribot_bringup/gazebo_spawner/: package.xml
src/tribot_bringup/gazebo_spawner/gazebo_spawner/: gazebo_spawner.py
src/tribot_bt/: CMakeLists.txt  package.xml
src/tribot_bt/behaviour_trees_xml/: main.xml
src/tribot_bt/include/tribot_bt/: move.hpp
src/tribot_bt/launch/: tribot_example.launch.py
src/tribot_bt/src/: nav2_sim_node.cpp
src/tribot_bt/src/behaviour_tree_nodes/: move.cpp
src/tribot_controller/: CMakeLists.txt  package.xml
src/tribot_controller/include/tribot_controller/: robot_controller.hpp  ros_topic_logger.hpp
src/tribot_controller/include/tribot_controller/plugins/action/: follow_path_action.hpp
src/tribot_controller/include/tribot_controller/plugins/condition/: goal_reached_condition.hpp  goal_updated_condition.hpp  is_battery_low_condition.hpp  is_flag_high_condition.hpp
src/tribot_controller/plugins/action/: follow_path_action.cpp
src/tribot_controller/plugins/condition/: goal_reached_condition.cpp  goal_updated_condition.cpp  is_battery_low_condition.cpp  is_flag_high_condition.cpp
src/tribot_controller/src/: main.cpp  robot_controller.cpp  ros_topic_logger.cpp
src/tribot_description/: CMakeLists.txt  package.xml
src/tribot_description/launch/: tribot_multi_spawn.launch.py  tribot_spawn.launch.py
src/tribot_description/params/: spawn_params.yaml
src/tribot_description/src/: inject_remap_entity.py
src/tribot_description/urdf/: macros.xacro  sensors.xacro  tribot.gazebo  tribot.urdf  tribot.urdf.xacro
src/tribot_nav2/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/tribot_nav2/include/tribot_nav2/: straight_line_planner.hpp
src/tribot_nav2/src/: straight_line_planner.cpp
src/tribot_simulations/tribot_fake_node/: CMakeLists.txt  package.xml
src/tribot_simulations/tribot_fake_node/include/tribot_fake_node/: tribot_fake_node.hpp
src/tribot_simulations/tribot_fake_node/launch/: rviz2.launch.py  tribot_fake_node.launch.py
src/tribot_simulations/tribot_fake_node/param/: tribot.yaml
src/tribot_simulations/tribot_fake_node/src/: inject_entity.py  tribot_fake_node.cpp
src/tribot_simulations/tribot_gazebo/: CMakeLists.txt  package.xml
src/tribot_simulations/tribot_gazebo/include/tribot_gazebo/: tribot_drive.hpp
src/tribot_simulations/tribot_gazebo/launch/: robot_state_publisher.launch.py  tribot_gazebo.launch.py  tribot_rviz2.launch.py  tribot_workshop.launch.py
src/tribot_simulations/tribot_gazebo/src/: inject_entity.py  tribot_drive.cpp
src/tribot_simulations/tribot_gazebo/worlds/: empty.world
src/tribot_simulations/tribot_gazebo_plugins/: CMakeLists.txt  package.xml
src/tribot_simulations/tribot_gazebo_plugins/include/tribot_gazebo_plugins/: GazeboRosLinearBatteryPlugin.hpp  RosBatteryConsumerPlugin.hpp
src/tribot_simulations/tribot_gazebo_plugins/src/: GazeboRosLinearBatteryPlugin.cpp  RosBatteryConsumerPlugin.cpp
src/tribot_teleop/: package.xml  setup.cfg  setup.py
src/tribot_teleop/tribot_teleop/: teleop_keyboard.py
src/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
